// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitAppWizardModal should match snapshot when visible = true 1`] = `
<Component
  afterClose={[MockFunction]}
  visible={true}
/>
`;

exports[`SubmitAppWizardModal should match snapshot when visible = true 2`] = `
<Component
  afterClose={[MockFunction]}
  visible={false}
/>
`;
